Polish code based on review: use Java 17 modern syntax
- Use isBlank() instead of isEmpty() for better whitespace handling
- Use toList() instead of collect(Collectors.toList()) for cleaner Java 17 syntax
- Remove unused Collectors import

Co-authored-by: manhfangg01 <188631044+manhfangg01@users.noreply.github.com>